# Sorting-Techniques-Visualizer-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SETUP.md
src/: main.cpp  visualizer.h
src/algorithms/: BubbleSort.h  HeapSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  SelectionSort.h
src/utils/: ArrayGenerator.h  Statistics.h  Timer.h
web/: index.html
web/css/: style.css
web/js/: algorithms.js  visualizer.js
